--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
@@ -21,8 +20,11 @@
         <!-- Fullscreen / edge-to-edge -->
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
-        <item name="android:windowLayoutInDisplayCutoutMode"
-            tools:targetApi="o_mr1">shortEdges</item>
+        <item
+            name="android:windowLayoutInDisplayCutoutMode"
+            tools:targetApi="o_mr1">
+            shortEdges
+        </item>
 
         <!-- Disable title/action bar -->
         <item name="windowNoTitle">true</item>
@@ -32,38 +34,13 @@
         <item name="materialButtonStyle">
             @style/Widget.MaterialComponents.Button
         </item>
+
     </style>
 
-    <!-- REQUIRED: NoActionBar theme used in Manifest -->
+    <!-- Optional NoActionBar alias (safe for Manifest use) -->
     <style name="Theme.BasitShop.NoActionBar" parent="Theme.BasitShop">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
     </style>
 
 </resources>
-=======
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.BasitShop" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorPrimary</item>
-        <item name="colorOnPrimary">@color/white</item>
-        
-        <item name="android:windowBackground">?android:attr/windowBackground</item>
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
-
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-        
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-
-        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
-
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-        
-        <item name="materialButtonStyle">@style/Widget.MaterialComponents.Button</item>
-    </style>
-</resources>
->>>>>>> 317de5e (update)
