--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -6,50 +6,13 @@
     android:layout_height="match_parent"
     android:background="@color/app_background">
 
-<<<<<<< HEAD
-    <!-- Glass overlay -->
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#08000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- Top shape -->
-    <ImageView
-        android:id="@+id/shape_top"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/top_left"
-        android:scaleType="fitXY"
-        app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintHeight_percent="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <!-- Bottom shape -->
-    <ImageView
-        android:id="@+id/shape_bottom"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/bottom_right"
-        android:scaleType="fitXY"
-        app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintHeight_percent="0.25"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <!-- Brand name -->
-=======
     <!-- Subtle glass overlay -->
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#08000000"/>
+        android:background="#08000000" />
 
-    <!-- Top Left Shape (peek style) -->
+    <!-- Top Left Shape -->
     <ImageView
         android:id="@+id/shape_top"
         android:layout_width="240dp"
@@ -59,9 +22,9 @@
         android:translationX="-60dp"
         android:translationY="-40dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Bottom Right Shape (peek style) -->
+    <!-- Bottom Right Shape -->
     <ImageView
         android:id="@+id/shape_bottom"
         android:layout_width="240dp"
@@ -71,44 +34,23 @@
         android:translationX="60dp"
         android:translationY="40dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- Brand -->
->>>>>>> 317de5e (update)
+    <!-- Brand name -->
     <TextView
         android:id="@+id/txt_brand_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BASITSHOP."
-<<<<<<< HEAD
-        android:textSize="40sp"
-        android:textColor="@color/brand_text"
-        android:fontFamily="@font/space_grotesk_semibold"
-        android:letterSpacing="0.22"
-=======
         android:textSize="42sp"
         android:letterSpacing="0.22"
         android:textColor="@color/brand_text"
->>>>>>> 317de5e (update)
         android:fontFamily="@font/space_grotesk_semibold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-<<<<<<< HEAD
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- Swipe container -->
-    <FrameLayout
-        android:id="@+id/swipe_container"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/bg_glass_pill"
-        android:elevation="12dp"
-        app:layout_constraintWidth_percent="0.8"
-=======
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.42"/>
+        app:layout_constraintVertical_bias="0.42" />
 
     <!-- Swipe to Get Started -->
     <FrameLayout
@@ -118,7 +60,6 @@
         android:layout_marginBottom="48dp"
         android:background="@drawable/bg_glass_pill"
         android:elevation="16dp"
->>>>>>> 317de5e (update)
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -128,38 +69,25 @@
             android:layout_height="wrap_content"
             android:text="Swipe to Get Started"
             android:textColor="@color/brand_text"
-<<<<<<< HEAD
-=======
             android:textStyle="bold"
->>>>>>> 317de5e (update)
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
 
         <FrameLayout
             android:id="@+id/swipe_thumb"
-<<<<<<< HEAD
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_margin="4dp"
-            android:background="@drawable/bg_glass_circle"
-            android:layout_gravity="start|center_vertical">
-
-            <ImageView
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-=======
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_margin="4dp"
             android:background="@drawable/bg_glass_circle"
-            android:elevation="20dp">
+            android:elevation="20dp"
+            android:layout_gravity="start|center_vertical">
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
->>>>>>> 317de5e (update)
                 android:layout_gravity="center"
                 android:src="@drawable/ic_arrow_right"
-                android:tint="@color/orange"/>
+                android:tint="@color/orange" />
+
         </FrameLayout>
     </FrameLayout>
 
