--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,7 +73,7 @@
 
             <!-- Glass Card -->
             <LinearLayout
-                android:layout_width="match_parent"
+               android:id="@+id/login_card" android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:orientation="vertical"
