--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,7 +71,7 @@
 
             <!-- Glass Card -->
             <LinearLayout
-                android:layout_width="match_parent"
+               android:id="@+id/register_card" android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:orientation="vertical"
