--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -6,11 +6,15 @@
     android:layout_height="match_parent"
     android:background="@color/app_background">
 
-    <!-- Subtle glass overlay -->
+    <!-- Subtle glass overlay (FIXED: constraints added) -->
     <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#08000000" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#08000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Top Left Shape -->
     <ImageView
