--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,48 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
-    <!-- Base Night Theme -->
-    <style name="Theme.BasitShop" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.BasitShop"
+        parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
-        <!-- Colors -->
+        <!-- Core Material colors -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
 
-        <item name="colorSecondary">@color/colorPrimary</item>
-        <item name="colorOnSecondary">@color/white</item>
-
-        <!-- Window -->
-        <item name="android:windowBackground">@color/colorBackground</item>
-        <item name="android:textColor">@color/colorText</item>
-
-        <!-- Fullscreen / cutout -->
-        <item
-            name="android:windowLayoutInDisplayCutoutMode"
-            tools:targetApi="o_mr1">
-            shortEdges
-        </item>
+        <!-- IMPORTANT: Let Material handle surfaces -->
+        <item name="android:windowBackground">?attr/colorSurface</item>
 
         <!-- System bars -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
 
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
+        <!-- Edge to edge (safe) -->
+        <item name="android:windowLayoutInDisplayCutoutMode"
+            tools:targetApi="o_mr1">shortEdges</item>
 
-        <!-- Night mode: light status bar OFF -->
+        <!-- Night mode -->
         <item name="android:windowLightStatusBar">false</item>
 
         <!-- No ActionBar -->
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
 
-    </style>
-
-    <!-- Night NoActionBar alias -->
-    <style name="Theme.BasitShop.NoActionBar" parent="Theme.BasitShop">
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
     </style>
 
 </resources>
